--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lilita+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lilita+One&display=swap" rel="stylesheet">
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <script defer src=https://backend.tabrizz.com/script.js data-id=pyqhQpmgVLhmqdEikkhwAyrFKqu1></script>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -13,6 +13,10 @@
       name="description"
       content="TabRizz: Boost your user experience with a new tab page."
     />
+    <meta property="og:title" content="TabRizz">
+    <meta property="og:description" content="Boost your website traffic using Emojis">
+    <meta property="og:url" content="https://tabrizz.com">
+    <meta property="og:type" content="website">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
