--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,7 +6,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lilita+One&display=swap" rel="stylesheet">
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!-- <script defer src=http://localhost:3000/script.js data-id=pyqhQpmgVLhmqdEikkhwAyrFKqu1></script> -->
     <script defer src=https://backend.tabrizz.com/script.js data-id=pyqhQpmgVLhmqdEikkhwAyrFKqu1></script>
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
